# lighter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Kernel.cpp  Kernel.h  main.cpp
src/artnet/: ArtNetInterface.cpp  ArtNetInterface.h
src/configuration/: Configuration.cpp  Configuration.h  ConfigurationLoader.cpp  ConfigurationLoader.h
src/device/: Device.cpp  Device.h  DeviceRepository.cpp  DeviceRepository.h  DeviceType.cpp  DeviceType.h  DeviceTypeRepository.cpp  DeviceTypeRepository.h
src/dmx/: DmxUniverse.cpp  DmxUniverse.h
src/http/: ClientProcessor.cpp  ClientProcessor.h  HttpJsonResponse.cpp  HttpJsonResponse.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
src/interface/: ArtNetInterface.cpp  ArtNetInterface.h  Interface.h  InterfaceRepository.cpp  InterfaceRepository.h
src/rendering/: Renderer.cpp  Renderer.h  ValueCalculator.cpp  ValueCalculator.h
src/scene/: Scene.cpp  Scene.h  SceneRepository.cpp  SceneRepository.h  SceneStep.cpp  SceneStep.h
types/: rgb_led.json
webroot/: index.html
webroot/script/: lighter.js
